--- a/style.css
+++ b/style.css
@@ -8,7 +8,19 @@
 }
 
 body{
-    background-color: rgb(35, 35, 35);
+    background-color: #232323;
+}
+
+nav{
+    background-color: #2b2b2b;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-bottom: 50px;
+}
+
+nav img{
+    width: 100px;
 }
 
 nav ul{
@@ -20,6 +32,13 @@ nav ul{
 
 nav ul li a{
     color: #2dffa7;
+    display: inline-block;
+    transition: .3s;
+}
+
+nav ul li a:hover{
+    color: #fff;
+    transform: scale(1.05);
 }
 
 table {
@@ -27,12 +46,19 @@ table {
     margin: 20px auto;
     border: none;
 }
+
 th, td {
     padding: 10px;
     text-align: center;
     color: #fff;
+    border-bottom: 2px solid #2b2b2b ;
     
 }
+.line{
+    content: "";
+    border-bottom: 32px solid #fff;
+}
+
 button {
     padding: 5px 10px;
     border: none;
@@ -44,14 +70,36 @@ button {
 button.btn-remove{
     background-color: #f94d4d;
 }
+
 form {
     width: 80%;
     margin: 20px auto;
     text-align: center;
 }
+
 input {
     padding: 5px;
     margin: 5px;
     border: none;
     border-radius: 5px;
+    outline: none;
+}
+
+section{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+h2{
+    color: #2dffa7;
+    text-align: center;
+}
+
+.container{
+    width: 50vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
 }
